objects/Member_Event__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Events</relationshipLabel>
        <relationshipName>Member_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Member Event</label>
    <nameField>
        <label>Event UUID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>